--- a/BoxOfCourses/BoxOfCourses/Views/Account/Login.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Account/Login.cshtml
@@ -74,8 +74,8 @@
     }
 
     .login-heading {
-        color: white;
-        font-size: 35px;
+        color: #C126EA;
+        font-size: 40px;
         font-weight: 700;
         padding: 30px;
     }
@@ -109,5 +109,11 @@
     }
     .login-button{
         color: black!important;
+    }
+
+    .form-control {
+        background-color: #303b51;
+        color: white;
+        border: 1px solid #5ABD64;
     }
 </style>
