--- a/BoxOfCourses/BoxOfCourses/Views/Account/Register.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Account/Register.cshtml
@@ -72,8 +72,8 @@
     .register-heading{
         color: white;
     }
-    .skill-up{
-        color: white;
+    .skill-up {
+        color: #C126EA;
         font-size: 20px;
     }
 
@@ -115,6 +115,12 @@
 
     .hr-register-heading {
         border: 0.5px solid #303641;
+    }
+
+    .form-control {
+        background-color: #303b51;
+        color: white;
+        border: 1px solid #5ABD64;
     }
 
 </style>
