--- a/BoxOfCourses/BoxOfCourses/Views/Courses/Details.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Courses/Details.cshtml
@@ -46,11 +46,11 @@
 
     .take-course-heading {
         font-size: 35px;
-        color: white;
+        color: #C126EA;
     }
 
     .take-course-heading-name {
-        font-size: 35px;
+        font-size: 50px;
         color: #5ABD64;
     }
 
