--- a/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
@@ -35,7 +35,7 @@
                         <td class="username-td">
                             @Html.DisplayFor(modelItem => item.UserName)
                         </td>
-                        <td>
+                        <td style="color: grey">
                             @Html.DisplayFor(modelItem => item.Category)
                         </td>
                         <td>
@@ -66,7 +66,6 @@
         background-repeat: no-repeat;
         background-size: 25px;
     }
-
     .cont-reviews-table
     {
         margin-top: 50px;
@@ -74,11 +73,9 @@
     .table-reviews-container{
         padding-top: 50px;
     }
-
     th {
         color: #5ABD64;
     }
-
     .username-td{
         color: lightblue;
         font-size: 15px;
