--- a/BoxOfCourses/BoxOfCourses/Views/Courses/Edit.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Courses/Edit.cshtml
@@ -71,7 +71,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Model.Type, htmlAttributes: new { @class = "control-label col-md-2", id = "modelTypeEdit" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Model.Type, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                        @Html.EditorFor(model => model.Model.Type, new { htmlAttributes = new { @class = "form-control form-control-disabled", disabled = "disabled", @readonly = "readonly" } })
                         @Html.ValidationMessageFor(model => model.Model.Type, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -108,12 +108,12 @@
     }
     .editcourse-heading-name {
         color: #5ABD64;
-        font-size: 35px;
+        font-size: 50px;
     }
 
     .editcourse-heading {
-        color: white;
-        
+        color: #C126EA;
+        font-size: 50px;
     }
 
     #modelNameEdit, 
@@ -133,5 +133,12 @@
 
     .form-container-edit{
         width: 550px!important;
+    }
+
+    .form-control, .form-control-disabled {
+        background-color: #303b51!important;
+        color: white;
+        border: 1px solid #5ABD64;
+        font-size: 15px;
     }
 </style>
