--- a/BoxOfCourses/BoxOfCourses/Views/Home/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <hr class="hr-index-heading" />
         </div>
     </div>
-    <div class="row">
+    <div class="row row-cont">
         <div class="col-md-6">
             <div class="hovereffect">
                 <img class="img-responsive img-rounded" src="~/Content/photos/index-logo.png" alt="">
@@ -23,11 +23,11 @@
                 <span class="text-white">About</span> <span class="text-green-500">BoxOfCourses</span>
             </h2>
             <p class="text-justify p-about">
-                BoxOfCourses was established to speed-up the search of
+                BoxOfCourses was established to <span style="color: #C126EA; font-weight: 700">speed-up </span>the search of
                 the specific course that anyone wants. The creator is Ljupcho Dimitriev, student at FCSE,
                 <i class="faculty-name">Faculty of Computer Science and Engineering, Skopje - </i><a class="faculty-link" href="https://www.finki.ukim.mk/">FINKI</a>.
             </p>
-            <a class="btn btn-success" href="~/Home/SendEmail">Get in touch</a>
+            <a class="get-in-touch-button btn btn-success" href="~/Home/SendEmail">Get in touch</a>
             <br />
             <br />
             <p class="text-justify p-about2">
@@ -38,7 +38,8 @@
 
     <div class="row">
         <div class="quote-centered">
-            <h4 class="where-effective-learning-happens"><span class="text-green-400">W</span>here <span class="text-green-400">e</span>ffective <span class="text-green-400">l</span>earning <span class="text-green-400">h</span>appens</h4>
+            @*<h4 class="where-effective-learning-happens"><span class="text-green-400">W</span>here <span class="text-green-400">e</span>ffective <span class="text-green-400">l</span>earning <span class="text-green-400">h</span>appens</h4>*@
+            <h4 style="color: #C126EA">Where effective learning happens</h4>
         </div>
     </div>
 
@@ -98,7 +99,7 @@
             <div class="col-sm-1"><a href="/Courses?arduino"><img class="icon-arduino" src="https://img.icons8.com/color/48/000000/arduino.png" /></a></div>
         </div>
         <div class="row row-icons-last">
-            <div class="col-sm-1"><a href="/Courses?html"><img class="icon-html" src="https://img.icons8.com/color/48/000000/html-5--v1.png"/></a></div>
+            <div class="col-sm-1"><a href="/Courses?html"><img class="icon-html" src="https://img.icons8.com/color/48/000000/html-5--v1.png" /></a></div>
             <div class="col-sm-1"><a href="/Courses?css"><img class="icon-css" src="https://img.icons8.com/color/48/000000/css3.png" /></a></div>
             <div class="col-sm-1"><a href="/Courses?node-js"><img class="icon-node-js" src="https://img.icons8.com/color/48/000000/nodejs.png" /></a></div>
             <div class="col-sm-1"><a href="/Courses?angular"><img class="icon-angular" src="https://img.icons8.com/color/48/000000/angularjs.png" /></a></div>
@@ -109,12 +110,14 @@
     </div>
 </div>
 
-    <div class="icon-bar text-right icon-bar-social-links">
-        <a class="social-links-icons-a icon-instagram" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-instagram" name="logo-instagram"></ion-icon></a>
-        <a class="social-links-icons-a" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-youtube" name="logo-youtube"></ion-icon></a>
-        <a class="social-links-icons-a" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-twitter" name="logo-twitter"></ion-icon></a>
-        <a class="social-links-icons-a" href="https://github.com/DimitrievLjupce" target="_blank"><ion-icon class="icon-github" name="logo-github"></ion-icon></a>
-    </div>
+<div class="icon-bar text-right icon-bar-social-links">
+    <a class="social-links-icons-a icon-instagram" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-instagram" name="logo-instagram"></ion-icon></a>
+    <a class="social-links-icons-a" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-youtube" name="logo-youtube"></ion-icon></a>
+    <a class="social-links-icons-a" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-twitter" name="logo-twitter"></ion-icon></a>
+    <a class="social-links-icons-a" href="https://github.com/DimitrievLjupce" target="_blank"><ion-icon class="icon-github" name="logo-github"></ion-icon></a>
+</div>
+
+❤️
 
 <style>
 
@@ -192,12 +195,12 @@
 
     .p-about {
         padding-top: 20px;
-        font-size: 17px;
+        font-size: 18px;
         color: white;
     }
 
     .p-about2 {
-        font-size: 17px;
+        font-size: 18px;
         color: white;
     }
 
@@ -231,7 +234,7 @@
 
     .text-white-500 {
         color: white;
-        font-size: 15px;
+        font-size: 17px;
         font-weight: 500;
     }
 
@@ -368,12 +371,16 @@
         .coding-tips-downside {
             margin-top: 100px;
         }
-        
+
+        .get-in-touch-button {
+            color: black;
+        }
 
 </style>
 
 @section scripts{
     <script>
+      
         $(".icon-java").on("mouseover", function () {
             $(".icon-java").attr("src", 'https://img.icons8.com/ios/48/000000/java-coffee-cup-logo--v1.png')
         }).on("mouseout", function () {
