--- a/BoxOfCourses/BoxOfCourses/Views/Home/SendEmail.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Home/SendEmail.cshtml
@@ -9,11 +9,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="email-form container">
         <h1 class="contact-heading-h1">Let's <span class="contact-heading-span">get in touch</span>! 👋</h1>
-        <p class="contact-us-text">You have an idea, any question, or maybe you want to report problem? Contact me.  <ion-icon style="color: orange; width: 25px; height: 28px; " name="flash"></ion-icon> </p>
+        <p class="contact-us-text">You have an idea, any question, or maybe you want to report problem? <span style="color: #5ABD64;" class="contact-me-label-heading">Contact me</span>.  <ion-icon style="color: orange; width: 25px; height: 28px; " name="flash"></ion-icon> </p>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-horizontal email-contanct-form">
@@ -22,7 +23,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Subject, new { htmlAttributes = new { @class = "form-control", placeholder = "ex. Report problem", id = "modelSubject" } }) <small style="color: white;">*optional</small>
+                                @Html.EditorFor(model => model.Subject, new { htmlAttributes = new { @class = "form-control", placeholder = "ex. Report problem", id = "modelSubject" } }) <small style="color: white;">*<span style="color: #C126EA;">optional</span></small>
                                 @* @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })*@
                             </div>
                         </div>
@@ -39,7 +40,26 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Attachment, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.TextBoxFor(model => model.Attachment, new { type = "file", @class = "form-control", id = "modelAttachment" }) <small style="color: white;">*optional</small>
+                                <div class="file-input">
+                                    @Html.TextBoxFor(model => model.Attachment, new { type = "file", name = "file-input", @class = "file-input__input", id = "file-input" })
+                                    <label class="file-input__label" for="file-input">
+                                        <svg aria-hidden="true"
+                                             focusable="true"
+                                             data-prefix="fas"
+                                             data-icon="upload"
+                                             class="svg-inline--fa fa-upload fa-w-16"
+                                             role="img"
+                                             @*xmlns="http://www.w3.org/2000/svg"*@
+                                             viewBox="0 0 512 512">
+                                            <path fill="currentColor"
+                                                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path>
+                                        </svg>
+                                        <span>Upload file</span>
+                                    </label>
+                                    <span style="color: #5ABD64; font-size: 15px;" class="file-name"></span>
+                                </div>
+                                <small style="color: white;">*<span style="color: #C126EA;">optional</span></small>
+                                @*@Html.TextBoxFor(model => model.Attachment, new { type = "file", @class = "modelAttachFile", id = "modelAttachment" }) <small style="color: white;">*<span style="color: #C126EA;">optional</span></small>*@
                                 @* @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })*@
                             </div>
                         </div>
@@ -69,13 +89,8 @@
                     }
                 </div>
             </div>
-            @*<div class="col-md-6">
-            <div class="image-container">
-                <img class="img-circle " src="~/Content/photos/creator.jpg" />
-            </div>
-        </div>*@
 
-            @*od tuka pocnuva za hoverot slikata*@
+            @*from here hover field starts for the photo*@
             <div class="row">
                 <div class="col-md-6">
                     <figure class="snip1218">
@@ -87,7 +102,7 @@
                         </div>
                         <figcaption style="height: 150px;">
                             <h3>Ljupcho<span> Dimitriev</span></h3>
-                            <h5>Student and developer in progress</h5>
+                            <h5 style="font-size: 15px; font-weight: 700;">Student and developer <span style="color: #C126EA;">in progress</span></h5>
                             <div class="icons">
                                 <a href="https://www.facebook.com/dimitrievlj/" target="_blank"><ion-icon style="width: 30px; height: 30px;" name="logo-facebook"></ion-icon></a>
                                 <a href="https://www.youtube.com/channel/UC7PLY3IjQhLi-dngwrojPKw" target="_blank"><ion-icon style="width: 30px; height: 30px; color: red;" name="logo-youtube"></ion-icon></a>
@@ -100,66 +115,76 @@
             </div>
         </div>
         <div class="row">
-            <div class="alert alert-warning alert-sent" role="alert">
-                <span class="successfullySentEmail " style="color: green;">@ViewBag.Message</span>
-            </div>
-            @*<div style="width: 350px" class="alert alert-info col-md-5">
-                @ViewBag.Message
-            </div>*@
-        </div>
-        <div class="row">
-            <div class="col-md-5">
-                <p class="emailErrorMessage">@ViewBag.errorMsg</p>
+            <div class="col-md-8">
+                <div class="email-message-container-success hide-div">
+                    <p style="color: green;"class="message-success" msgsuccess="@ViewBag.Message">@ViewBag.Message</p>
+                </div>
+                <div class="email-message-container-error hide-div ">
+                    <p style="color: green"; class="message-error" msgerror="@ViewBag.errorMsg">@ViewBag.errorMsg</p>
+                </div>
             </div>
         </div>
-
-
-       
-        
     </div>
 </body>
 </html>
 
 @section scripts{
     <script>
-       
+
+        $(".hide-div").hide();
+        $(window).on("load", function () {
+            var currentMessage = $(".message-success").attr("msgsuccess");
+            if (currentMessage === "Your email has been sent!") {
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Your email has been sent!',
+                    showConfirmButton: false,
+                    timer: 2200
+                })
+            }
+
+            var messageError = $(".message-error").attr("msgerror");
+            if (messageError === "Something went wrong, make sure you entered valid google email!") {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Something went wrong, make sure you entered valid google email!'
+                })
+            }
+        })
+
+        @*script for get current name of file for upload*@
+        $('#file-input').change(function () {
+            console.log("ok")
+            var i = $(this).prev('label').clone();
+            console.log(i);
+            var file = $('#file-input')[0].files[0].name;
+            console.log(file);
+            $(this).prev('label').text(file);
+            $(".file-name").text(file);
+        });
+
+
         $(document).ready(function () {
             validate();
             $('#modelBody, #modelEmail, #modelPassword').change(validate);
-
-            $(".alert-sent").hide();
-            clearInputFields();
-
-            
         });
 
         function validate() {
             if ($('#modelBody').val().length > 0 &&
                 $('#modelEmail').val().length > 0 &&
                 $('#modelPassword').val().length > 0) {
-                $("#submitEmailForm").prop("disabled", false);    
+                $("#submitEmailForm").prop("disabled", false);
             }
             else {
                 $("#submitEmailForm").prop("disabled", true);
             }
         }
-        
-        function clearInputFields() {
-            $("#submitEmailForm").on("click", function (event) {
-              
-               @* if ($("#successfullySentEmail").text() === "Your email has been sent!") {
-                    $("#successfullySentEmail").addClass("alert alert-success");
-                    $("#modelSubject").val("");
-                    $("#modelBody").val("");
-                    $("#modelEmail").val("");
-                    $("#modelPassword").val("");
-                }*@
-            })
-        }
     </script>
 }
 
 <style>
+
     .email-form {
         padding: 60px 100px 0px 100px;
     }
@@ -171,7 +196,7 @@
         text-align: center;
     }
     .contact-heading-span {
-        color: #5ABD64;
+        color: #C126EA;
     }
     .email-contanct-form{
         margin-top: 30px;
@@ -195,18 +220,6 @@
     input[type=file]{
         color: white;
     }
-
-    @*iframe{
-        border-radius: 20px;
-        height: 200px;
-        margin-top: 50px;
-        position: relative;
-    }*@
-
-    @*iframe {
-        padding-top: 50px;
-    }
-    *@
 
     #submitEmailForm {
         align-content: center;
@@ -240,7 +253,7 @@
     }
 
 
-    @*od tuka pocnuva za hoverot slikata*@
+    @*from here hover field starts for the photo*@
 
     figure.snip1218 {
         font-family: 'Raleway', Arial, sans-serif;
@@ -365,4 +378,50 @@
             filter: grayscale(100%);
         }
 
+        @*from here starts style for attachment button*@
+        .file-input__input {
+            width: 0.1px;
+            height: 0.1px;
+            opacity: 0;
+            overflow: hidden;
+            position: absolute;
+            z-index: -1;
+        }
+
+        .file-input__label {
+            cursor: pointer;
+            display: inline-flex;
+            align-items: center;
+            border-radius: 4px;
+            font-size: 14px;
+            font-weight: 600;
+            color: #fff;
+            font-size: 14px;
+            padding: 10px 12px;
+            background-color: #4245a8;
+            box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+        }
+
+        .file-input__label svg {
+            height: 16px;
+            margin-right: 4px;
+        }
+
+        .file-input__label{
+            background-color: #C126EA;
+        }
+
+        .file-input__label:hover{
+            background-color: #9025AC;
+        }
+        @*style ends here attachment button*@
+
+
+        @*Sweet alert custom css here*@
+        .swal2-html-container, .swal2-title{
+            font-size: 20px;
+        }
+        .swal2-confirm{
+            width: 100px;
+        }
 </style>
